# deskbuddy

./: .gitignore  LICENSE  README.md  pyproject.toml
deskbuddy/: __init__.py  cli.py  config.py  runtime.py
deskbuddy/brain/: __init__.py  agent.py  providers.py
deskbuddy/face/: __init__.py  gui.py  index.html  style.css
deskbuddy/hands/: __init__.py  providers.py  safety.py  tools.py
deskbuddy/setup/: __init__.py  wizard.py
deskbuddy/skills/: __init__.py  loader.py
deskbuddy/skills/bundled/system/system-status/: SKILL.md
deskbuddy/skills/bundled/web/web-search/: SKILL.md
deskbuddy/voice/: __init__.py  stt.py  tts.py  wakeword.py
scripts/: build-deb.sh  deskbuddy.spec  install.ps1  install.sh
tests/: conftest.py  test_brain.py  test_brain_native.py  test_config.py  test_hands.py  test_providers_model.py  test_runtime.py  test_skills.py  test_wakeword.py
web/: CLAUDE.md  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/components/sections/: architecture.tsx  footer.tsx  hero.tsx  platform-story.tsx  quick-start.tsx  status.tsx  wake-word-demo.tsx
web/components/shared/: section-heading.tsx  smooth-scroll-provider.tsx  terminal-block.tsx
web/components/ui/: accordion.tsx  button.tsx  tabs.tsx
web/hooks/: use-reduced-motion-safe.ts
web/lib/: gsap.ts
