[project]
name = "deskbuddy"
version = "0.1.0"
description = "DeskBuddy - Alexa for your PC. A voice-powered desktop companion with a terminal install and a styled GUI."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "King Jethro Jerry" }]
dependencies = [
    "openai>=1.30",       # OpenAI-compatible client (works with Nous, OpenAI, local, etc.)
    "pyyaml>=6.0",
    "rich>=13.0",         # pretty terminal wizard / logs
    "sounddevice>=0.4.6", # mic capture
    "numpy>=1.24",
    "edge-tts>=6.1",      # natural, free, online text-to-speech (preferred)
    "kokoro-onnx>=0.3",   # FREE local studio-quality neural TTS (top tier)
    "soundfile>=0.12",    # wav output for kokoro
]

[project.optional-dependencies]
# Pulled in by the installer so STT + wake word work out of the box.
# NOTE: our wake-word engine is DeskBuddy's OWN code (voice/wakeword.py),
# not the openwakeword pip package, which has no Linux build.
voice = [
    "faster-whisper>=1.0",   # local speech-to-text
]

[project.scripts]
buddy = "deskbuddy.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["deskbuddy*"]

[tool.setuptools.package-data]
"deskbuddy.skills" = ["bundled/**/*.md"]

